# CV-SimpleStereo

./: README.md  pyproject.toml  requirements.txt
Legacy/: demo_affine_ransac_synth.py  demo_affine_ransac_video.py  demo_ransac_synth.py  demo_translation_stabilize_video.py
scripts/: demo_peleg_stereo.py  demo_peleg_stereo_stabilized.py
src/stereocv/matching/: __init__.py  clean_points.py  corners.py  lk_tracking.py  pipeline.py
src/stereocv/peleg/: __init__.py  peleg_stereo.py
src/stereocv/ransac/: __init__.py  affine.py  affine_fitter.py  core.py  translation.py  translation_fitter.py  types.py
src/stereocv/stabilize/: __init__.py  peleg_pipeline.py  smoothing.py  stabilizer.py  warp.py
src/stereocv/stereo/: __init__.py  validation.py  vergence.py
src/stereocv/viz/: __init__.py  visulization.py
