[project]
name = "stereocv"
version = "0.1.0"
description = "Stereo from motion with RANSAC stabilization"
authors = [{name = "Andy"}]
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "opencv-python"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
